chore: added example usage for macros

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,8 @@
     % include all the others chapter here, "introduction.tex" and "conclusion.tex" are only examples
 	
 	\include{introduction}
-	
+	\include{examples/image}
+	\include{examples/codeblock}
 	\include{conclusions}
 	
 	\bibliographystyle{plainnat}
