chore: improved(?) page margins and order

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
     Non esiste un template ufficiale per le tesi di laurea triennale in LaTeX e questo template non mira a coprire il gap, semplicemente se ti piace usalo.\\
     Il logo dell'Università Ca' Foscari è la stessa versione modificata presente nel template originale, ogni diritto appartiene a Ca' Foscari Università di Venezia. 
 	
+	\cleardoublepage
 	
 	\chapter*{Abstract}
     \lipsum[1-3]
@@ -26,8 +27,8 @@
     Lorem ipsum, dolor sit amet, consectetur, adipiscing elit
 	
 	\tableofcontents
-	
-	\clearpage
+	\phantomsection
+	\cleardoublepage
 	
 	% start arabic page numbering
     \pagenumbering{arabic}
